// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack should render correctly with alignCenter 1`] = `
<DocumentFragment>
  .css-1l6mcrb-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
    class="css-1l6mcrb-Stack ehpbis70"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render correctly with default props 1`] = `
<DocumentFragment>
  .css-1guc91g-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
    class="css-1guc91g-Stack ehpbis70"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
    <div>
      third child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render correctly with flex 1 1`] = `
<DocumentFragment>
  .css-10fpg8v-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="css-10fpg8v-Stack ehpbis70"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render correctly with row direction 1`] = `
<DocumentFragment>
  .css-1tfad1c-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
    class="css-1tfad1c-Stack ehpbis70"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
    <div>
      third child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render correctly with width 100% 1`] = `
<DocumentFragment>
  .css-1sg8g9d-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

<div
    class="css-1sg8g9d-Stack ehpbis70"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render correctly with wrap as boolean 1`] = `
<DocumentFragment>
  .css-1w45fx4-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
    class="css-1w45fx4-Stack ehpbis70"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stack should render correctly with wrap as string 1`] = `
<DocumentFragment>
  .css-1b660pb-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: wrap-reverse;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
}

<div
    class="css-1b660pb-Stack ehpbis70"
  >
    <div>
      first child
    </div>
    <div>
      second child
    </div>
  </div>
</DocumentFragment>
`;
